# GTestTemplate

./: .cproject  .gitignore  .project  CMakeLists.txt  README.md  action.yml
.github/workflows/: main.yml
Common/: CMakeLists.txt  TrivialClass.hpp  basic_c.c  basic_c.h  search_array.c  search_array.h  testables.c
test/: CMakeLists.txt  CMakeTests.txt  MyFirstTest.cpp  collections.h  test_basic_c.cpp  test_main.cpp  test_search_array_it.cpp  test_search_array_rec.cpp
